src/semantic/tests/data/negative/undeclared-variable-1.hsh
function ()
	x = 2
	let x = 1
end
